add test for custom topic

--- a/src/tutorial_interfaces/CMakeLists.txt
+++ b/src/tutorial_interfaces/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(example_topic_rclcpp)
+project(tutorial_interfaces)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -17,28 +17,14 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(tutorial_interfaces REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
-add_executable(topic_publisher_01 src/topic_publisher_01.cpp)
-ament_target_dependencies(topic_publisher_01 rclcpp std_msgs)
-
-add_executable(topic_subscribe_01 src/topic_subscribe_01.cpp)
-ament_target_dependencies(topic_subscribe_01 rclcpp std_msgs)
-
-add_executable(topic_publisher_02 src/topic_publisher_02.cpp)
-ament_target_dependencies(topic_publisher_02 rclcpp tutorial_interfaces)
-
-add_executable(topic_subscribe_02 src/topic_subscribe_02.cpp)
-ament_target_dependencies(topic_subscribe_02 rclcpp tutorial_interfaces)
-
-install(TARGETS
-  topic_publisher_01
-  topic_subscribe_01
-  topic_publisher_02
-  topic_subscribe_02
-  DESTINATION lib/${PROJECT_NAME}
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/Num.msg"
+  "msg/Sphere.msg"
+  "srv/AddThreeInts.srv"
+  DEPENDENCIES geometry_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
 )
 
 if(BUILD_TESTING)
