add first humanoid motor control

--- a/src/humanoid_motor_control_cpp/CMakeLists.txt
+++ b/src/humanoid_motor_control_cpp/CMakeLists.txt
@@ -23,6 +23,8 @@ include_directories(include)
 
 add_library(humanoid_motor_control_cpp
   src/ankle_ik.cpp
+  src/motor_control.cpp
+  src/motor_driver.cpp
 )
 
 install(TARGETS humanoid_motor_control_cpp
