--- a/src/humanoid_motor_control_cpp/CMakeLists.txt
+++ b/src/humanoid_motor_control_cpp/CMakeLists.txt
@@ -21,25 +21,22 @@ find_package(rclcpp REQUIRED)
 
 include_directories(include)
 
-add_library(humanoid_motor_control_cpp
-  src/ankle_ik.cpp
+add_executable(humanoid_motor_example
+  src/example.cpp
+  src/kinematic/ankle_ik.cpp
   src/motor_control.cpp
   src/motor_driver.cpp
   src/spi_utils.cpp
 )
+ament_target_dependencies(humanoid_motor_example rclcpp)
 
-install(TARGETS humanoid_motor_control_cpp
+install(TARGETS 
+  humanoid_motor_example
   DESTINATION lib/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
 
