--- a/.github/workflows/ros2-foxy.yaml
+++ b/.github/workflows/ros2-foxy.yaml
@@ -7,9 +7,8 @@
 #     strategy:
 #       matrix:
 #         env:
-#           - {ROS_DISTRO: humble, ROS_REPO: main}
-#           - {ROS_DISTRO: rolling, ROS_REPO: main}
-#     runs-on: ubuntu-22.04
+#           - {ROS_DISTRO: foxy, ROS_REPO: main}
+#     runs-on: ubuntu-20.04
 #     steps:
 #       - uses: actions/checkout@v1
 #       - uses: 'ros-industrial/industrial_ci@master'
