add parameter event handler example

--- a/src/action_tutorials_py/package.xml
+++ b/src/action_tutorials_py/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="759094438@qq.com">rocketsky</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <depend>action_tutorials_interfaces</depend>
   <depend>rclpy</depend>
