--- a/src/example_parameter_event_handler_cpp/package.xml
+++ b/src/example_parameter_event_handler_cpp/package.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>action_tutorials_interfaces</name>
+  <name>example_parameter_event_handler_cpp</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>C++ parameter events client tutorial</description>
   <maintainer email="759094438@qq.com">rocketsky</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-  <depend>action_msgs</depend>
-
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>rclcpp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
